<resources>
    <string name="app_name">My First Form</string>
    <string name="required_param">*requerido</string>
    <string name="name">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="retype_password">Repetir contraseña</string>
    <string name="female_gendre">Femenino</string>
    <string name="male_gendre">Masculino</string>
    <string name="music_hobbie">Musica</string>
    <string name="movie_hobbie">Peliculas</string>
    <string name="read_hobbie">Lectura</string>
    <string name="games_hobbie">VideoJuegos</string>
    <string name="birth_Date">Selecciona tu fecha de nacimiento</string>
    <string name="city">Ciudad de nacimiento</string>
    <string name="save_button">Guardar</string>
    <string name="hobbies_select">Selecciona tus hobbies</string>
    <string name="sex_select">Selecciona tu sexo</string>
    <string name="show_info">Aquí se mostrará la información ingresada</string>
    <string name="required_fields">Todos los campos son obligatorios</string>
    <string name="pass_no_match">Las contraseñas no coinciden</string>
    <string name="email_valid">Formato de correo invalido</string>
    <string name="pass_err">La contraseña debe tener entre 6 y 10 caracteres</string>


    <string name="nameShow">Nombre :</string>
    <string name="dateBirthShow">Fecha Nacimiento :</string>
    <string name="emailShow">Correo :</string>
    <string name="gendreShow">Genero :</string>
    <string name="hobbiesShow">hobbies :</string>
    <string name="placeBirthShow">Ciudad :</string>


    <string-array name="ciudades">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
    </string-array>

    <string-array name="hobbies">
        <item>Hobby 1</item>
        <item>Hobby 2</item>
        <item>Hobby 3</item>
        <item>Hobby 4</item>
    </string-array>


</resources>