<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/PrimaryColor"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingTop="30dp"
        android:paddingRight="60dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@mipmap/ic_launcher_round" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:textColorHint="@color/TertiaryColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/TertiaryColor"
            app:counterTextColor="@color/black"
            app:helperText="@string/required_param"
            app:helperTextTextColor="@color/white"
            app:hintEnabled="true"
            app:hintTextColor="@color/TertiaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:textColorHint="@color/TertiaryColor"
            app:boxStrokeColor="@color/TertiaryColor"
            app:helperText="@string/required_param"
            app:helperTextTextColor="@color/white"
            app:hintEnabled="true"
            app:hintTextColor="@color/TertiaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/pass"
            android:textColorHint="@color/TertiaryColor"
            app:boxStrokeColor="@color/TertiaryColor"
            app:helperText="@string/required_param"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/TertiaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/retype_password"
            android:textColorHint="@color/TertiaryColor"
            app:boxStrokeColor="@color/TertiaryColor"
            app:helperText="@string/required_param"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/TertiaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_repetir_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sex_select"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radio_sexo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_femenino"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:hint="@string/female_gendre"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />

            <RadioButton
                android:id="@+id/rb_masculino"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:hint="@string/male_gendre"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />

        </RadioGroup>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hobbies_select"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_hobby_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/music_hobbie"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />

            <CheckBox
                android:id="@+id/cb_hobby_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/movie_hobbie"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_hobby_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/read_hobbie"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />

            <CheckBox
                android:id="@+id/cb_hobby_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/games_hobbie"
                android:textColor="@color/TertiaryColor"
                android:textColorHint="@color/TertiaryColor" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fecha_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#008080"
            app:boxStrokeColor="#FFFFFF">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/birth_Date"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_lugar_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/city"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_lugar_nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/ciudades"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/save_button" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/show_info"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</ScrollView>